# LotusEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  allocator.hpp  containers.hpp  main.cc  makefile  math.hpp
app/: main.cpp
core/: allocator.hpp  containers.hpp  math.hpp  utils.hpp
ecs/: component.hpp  component_pool.hpp  ecs.hpp  registry.hpp
ecs/containers/: component_pool.hpp  entity.hpp
include/glad/: glad.h
include/lotus/: allocator.hpp  application.hpp  gl.hpp  global.hpp  linear_allocator.hpp  region_allocator.hpp  stack_allocator.hpp  types.hpp  utils.hpp
include/lotus/application/: application.hpp  window.hpp
include/lotus/gl/: buffer.hpp  drawable.hpp  render.hpp  shader.hpp  shader_program.hpp  vertex_array.hpp  vertex_batch.hpp
shaders/: test.frag  test.vert
src/: main.cc
src/core/: allocator.hpp  containers.hpp  math.hpp  utils.hpp
src/core/application/: application.cpp  application.hpp  gl_application.hpp  gl_window.hpp
src/core/application/window/: gl_window.hpp  window.h
src/core/assets/: asset.hpp  asset_manager.hpp
src/core/config/: configuration.hpp
src/core/renderer/: buffer.hpp  camera.hpp  drawable.hpp  material.hpp  renderer.hpp  shader.hpp  texture.hpp  vertex.hpp  vertex_array.hpp  vertex_batch.hpp  vertex_buffer.hpp
src/core/utils/: types.hpp
src/ecs/: registry.hpp
src/ecs/containers/: component_pool.hpp
src/gl/: shader.cpp  shader_program.cpp
test/: stack_allocator_test.cpp  test_main.cc  test_main.cpp  test_vector2.cc
